// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λx => λy -> y) @?2 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument when applying explicit arg to fn with implicit param 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 60,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 58,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 45,
          "type": "Neutral",
          "value": {
            "id": 44,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "arg": {
        "id": 1642,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 1640,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 1631,
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "x",
          },
          "body": {
            "binding": {
              "annotation": {
                "id": 1632,
                "type": "Var",
                "variable": {
                  "name": "String",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "Lambda",
              "variable": "y",
            },
            "body": {
              "id": 1633,
              "type": "Var",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "id": 1634,
            "type": "Abs",
          },
          "id": 1636,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 1641,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 1643,
      "type": "App",
    },
    "type": {
      "id": 62,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λx => λy -> y) @?1 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts implicit argument with correct type 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 93,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 91,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 78,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "id": 2467,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 2465,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 2456,
              "type": "Var",
              "variable": {
                "name": "Num",
                "type": "Free",
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "x",
          },
          "body": {
            "binding": {
              "annotation": {
                "id": 2457,
                "type": "Var",
                "variable": {
                  "name": "String",
                  "type": "Free",
                },
              },
              "icit": "Explicit",
              "type": "Lambda",
              "variable": "y",
            },
            "body": {
              "id": 2458,
              "type": "Var",
              "variable": {
                "index": 0,
                "type": "Bound",
              },
            },
            "id": 2459,
            "type": "Abs",
          },
          "id": 2461,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 2466,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 2468,
      "type": "App",
    },
    "type": {
      "id": 95,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "String ~~ String",
    ],
    "term": "(λa => (λb => λc -> c) @?3) @?4 "hello"",
    "type": "String",
  },
}
`;

exports[`inference: application > implicit insertion > inserts multiple implicit arguments when needed 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 139,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 0,
        "right": {
          "id": 137,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 116,
          "type": "Neutral",
          "value": {
            "id": 115,
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 112,
          "type": "Neutral",
          "value": {
            "id": 111,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "arg": {
        "id": 3299,
        "type": "Lit",
        "value": {
          "type": "String",
          "value": "hello",
        },
      },
      "func": {
        "arg": {
          "id": 3297,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "func": {
          "binding": {
            "annotation": {
              "id": 3281,
              "type": "Var",
              "variable": {
                "lvl": 0,
                "type": "Meta",
                "val": 1,
              },
            },
            "icit": "Implicit",
            "type": "Lambda",
            "variable": "a",
          },
          "body": {
            "arg": {
              "id": 3291,
              "type": "Var",
              "variable": {
                "lvl": 1,
                "type": "Meta",
                "val": 3,
              },
            },
            "func": {
              "binding": {
                "annotation": {
                  "id": 3282,
                  "type": "Var",
                  "variable": {
                    "lvl": 1,
                    "type": "Meta",
                    "val": 2,
                  },
                },
                "icit": "Implicit",
                "type": "Lambda",
                "variable": "b",
              },
              "body": {
                "binding": {
                  "annotation": {
                    "id": 3283,
                    "type": "Var",
                    "variable": {
                      "name": "String",
                      "type": "Free",
                    },
                  },
                  "icit": "Explicit",
                  "type": "Lambda",
                  "variable": "c",
                },
                "body": {
                  "id": 3284,
                  "type": "Var",
                  "variable": {
                    "index": 0,
                    "type": "Bound",
                  },
                },
                "id": 3285,
                "type": "Abs",
              },
              "id": 3287,
              "type": "Abs",
            },
            "icit": "Implicit",
            "id": 3292,
            "type": "App",
          },
          "id": 3293,
          "type": "Abs",
        },
        "icit": "Implicit",
        "id": 3298,
        "type": "App",
      },
      "icit": "Explicit",
      "id": 3300,
      "type": "App",
    },
    "type": {
      "id": 141,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: application > simple application f x 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
    ],
    "term": "(λx -> x) 1",
    "type": "?1",
  },
}
`;

exports[`inference: application > simple application f x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 25,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 21,
          "type": "Neutral",
          "value": {
            "id": 20,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "term": {
      "arg": {
        "id": 817,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "func": {
        "binding": {
          "annotation": {
            "id": 813,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
          "icit": "Explicit",
          "type": "Lambda",
          "variable": "x",
        },
        "body": {
          "id": 814,
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "id": 815,
        "type": "Abs",
      },
      "icit": "Explicit",
      "id": 818,
      "type": "App",
    },
    "type": {
      "id": 28,
      "type": "Neutral",
      "value": {
        "id": 27,
        "type": "Var",
        "variable": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
    },
    "typedTerms": {},
  },
}
`;
